# korean_ocr_using_pororo

./: .gitignore  Pipfile  main.py  pyproject.toml
pororo/: pororo.py
pororo/tasks/utils/: download_utils.py
sakak_ocr/: fine_turning.py
utils/: pre_processing.py
