[tool.poetry]
name = "sakak_test_ocr"
version = "0.1.0"
description = ""
authors = ["Kukjun Lee <lxx3380@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "4.8.0.74"
torch = "2.0.1"
torchvision = "0.15.2"
wget = "3.2"
matplotlib = "3.7.2"
scikit-image = "0.21.0"
pyqt6 = "6.5.2"
easyocr = "1.7.0"
numpy = "<2.0"  # NumPy 2.x 대신 1.x 버전 사용
pdf2image = "^1.17.0"
python-docx = "^1.1.2"
pillow = "^10.4.0"
transformers = "^4.45.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
